syntax = "proto3";

option csharp_namespace = "ShoppingCartGrpc.Protos";

service ShoppingCartProtoService{
    rpc GetShoppingCart(GetShoppingCartRequest) returns (ShoppingCartModel);
    rpc CreateShoppingCart(ShoppingCartModel) returns (ShoppingCartModel);
    rpc AddItemIntoShoppingCart(stream AddItemIntoShoppingCartRequest) returns (AddItemIntoShoppingCartResponse);
    rpc RemovetemIntoShoppingCart(RemovetemIntoShoppingCartRequest) returns (RemovetemIntoShoppingCartResponse);

}

message GetShoppingCartRequest {
    string userName = 1;
}

message AddItemIntoShoppingCartRequest {
    string userName = 1;
    string discountCode = 2;
    ShoppingCartItemModel newCartItem = 3;
}

message AddItemIntoShoppingCartResponse {
    bool success = 1;
    int32 insertCount = 2;
}

message RemovetemIntoShoppingCartRequest {
    string userName = 1;
    ShoppingCartItemModel removeCartItem = 2;
}

message RemovetemIntoShoppingCartResponse {
    bool success = 1;
}

message ShoppingCartModel{
    string userName = 1;
    repeated ShoppingCartItemModel cartItem = 2;
}

message ShoppingCartItemModel{
    int32 quantity = 1;
    string color = 2;
    float price = 3;
    int32 productId = 4;
    string productName = 5;
}